[gd_scene load_steps=5 format=3 uid="uid://bbqq17qlfa7wk"]

[ext_resource type="Script" uid="uid://dkh8co7i6l18g" path="res://PauseMenu.gd" id="1_t3gbq"]
[ext_resource type="Theme" uid="uid://b511ckv5t4uuq" path="res://telas/interface/assets/temas/tema_padrao.tres" id="2_3bmkj"]
[ext_resource type="FontFile" uid="uid://72i2e5g7h0d2" path="res://telas/interface/assets/fontes/Fredoka_One/FredokaOne-Regular.ttf" id="3_hqfkd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4d2k"]
bg_color = Color(0, 0.657, 0.861, 0.121)

[node name="PauseMenu" type="Control"]
process_mode = 2
light_mask = 0
layout_mode = 3
anchor_left = 0.153
anchor_top = 0.269
anchor_right = 0.858
anchor_bottom = 0.731
offset_left = -0.160011
offset_top = -0.52002
offset_right = -7.76001
offset_bottom = 0.52002
script = ExtResource("1_t3gbq")

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = 19
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_x4d2k")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = -30

[node name="ContinueButton" type="Button" parent="PanelContainer/VBoxContainer"]
z_index = 21
custom_minimum_size = Vector2(300, 130)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("2_3bmkj")
theme_override_fonts/font = ExtResource("3_hqfkd")
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "CONTINUAR"
icon_alignment = 1

[node name="ExitButton" type="Button" parent="PanelContainer/VBoxContainer"]
z_index = 21
custom_minimum_size = Vector2(300, 130)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("2_3bmkj")
theme_override_fonts/font = ExtResource("3_hqfkd")
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "SAIR"
icon_alignment = 1
